website/docs/v6.5.0/zh/guide/examples/git-worktree.mdx
---
title: 'Git Worktree'
description: '通过 session 的 git 工具操作 git 与 git worktree'
---

import { Tab, Tabs } from '@rspress/core/theme';

# Git Worktree

session 的 `git` 工具以宿主侧特权操作的方式运行 git。它接收一个结构化的命令对象
（`command`，worktree 操作还可带 `subcommand`/`name`/`path`），并返回包含
`output` 与 `exitCode` 的工具结果。本示例先检查仓库，然后直接通过工具表面创建、
列出并移除一个 worktree。

<Tabs>
<Tab label="Node.js">

```ts
import { Agent } from '@a3s-lab/code';
import * as path from 'path';

const agent = await Agent.create('agent.acl');
const session = agent.session('/path/to/repo');

// Inspect the repo
const status = await session.git({ command: 'status' });
console.log(status.output);

// Create a worktree on a new branch
const wtPath = path.join('/path/to/repo', 'wt-feature-auth');
const created = await session.git({
  command: 'worktree',
  subcommand: 'create',
  name: 'feature-auth',
  path: wtPath,
});
if (created.exitCode !== 0) throw new Error(`create failed: ${created.output}`);

// List worktrees
const list = await session.git({ command: 'worktree', subcommand: 'list' });
console.log(list.output);

// Remove the worktree when done
const removed = await session.git({
  command: 'worktree',
  subcommand: 'remove',
  path: wtPath,
});
if (removed.exitCode !== 0) throw new Error(`remove failed: ${removed.output}`);

session.close();
```

</Tab>
<Tab label="Python">

```python
import os
from a3s_code import Agent, SessionOptions

agent = Agent.create("agent.acl")
session = agent.session("/path/to/repo", SessionOptions())

# Inspect the repo
status = session.git({"command": "status"})
print(status.output)

# Create a worktree on a new branch
wt_path = os.path.join("/path/to/repo", "wt-feature-auth")
created = session.git({
    "command": "worktree",
    "subcommand": "create",
    "name": "feature-auth",
    "path": wt_path,
})
if created.exit_code != 0:
    raise RuntimeError(f"create failed: {created.output}")

# List worktrees
listing = session.git({"command": "worktree", "subcommand": "list"})
print(listing.output)

# Remove the worktree when done
removed = session.git({
    "command": "worktree",
    "subcommand": "remove",
    "path": wt_path,
})
if removed.exit_code != 0:
    raise RuntimeError(f"remove failed: {removed.output}")

session.close()
```

</Tab>
</Tabs>

请传入命令对象，而不是位置参数：`{ command: 'status' }`、`{ command: 'diff' }`
或 `{ command: 'worktree', subcommand: 'list' }`。每次调用都会返回一个工具结果，
因此在使用 output 之前，应先检查 `exitCode`（Node）/ `exit_code`（Python）。

直接 git 调用是宿主侧特权操作。push、publish 和 release workflow 应放在应用级确认
或自动化关卡后面。

可运行版本位于 `crates/code/sdk/node/examples/git/test_worktree_git.ts`。
